doc: drop commons.io usage from doc samples
Motivation:

We can use InputStream#readAllBytes() that was introduced in Java 9 as we've raised the baseline to Java 11.